# ICalc

./: package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/NavBar/: NavBar.css  NavBar.jsx
