[package]
name = "icalc"
version = "0.1.0"
description = "A Tauri App"
authors = [ "LuceCompany" ]
license = "LuceCompany"
repository = ""
default-run = "icalc"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ ] }

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "icalc"
path = "src/main.rs"
